# entrainment

./: .gitignore  README.md  backup2  backup3  coffee_beta_to_783hz_20min.gnaural  session_result_backup.json
backend/: README.md  pyproject.toml
backend/clinicalq_backend/: __init__.py  analysis.py  bands.py  cli.py  openbci.py  protocol.py  runner.py  types.py
backend/examples/: session_config_simulated.json  session_config_simultaneous_simulated.json
backend/tests/: test_analysis.py
desktop/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
