[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinicalq-backend"
version = "0.1.0"
description = "Local ClinicalQ acquisition and analysis engine for OpenBCI Cyton"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
openbci = ["brainflow>=5.14"]
dev = ["pytest>=8.0"]

[project.scripts]
clinicalq = "clinicalq_backend.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clinicalq_backend*"]

